<resources>
    <string name="app_name">Instagram Hesam</string>
    <string name="create_new_account">Create New Account</string>
    <string name="next">Next</string>
    <string name="add_profile_photo">Add profile photo</string>
    <string name="complete_sign_up">Complete Sign-up</string>
    <string name="complete_the_profile">Complete the Profile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_explore">Explore</string>
    <string name="title_new_post">NewPost</string>
    <string name="title_igtv">IGTV</string>
    <string name="title_profile">Profile</string>
    <string name="search">Search</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="text_name">Name</string>
    <string name="text_bio">Text bio</string>
    <string name="mute">Mute</string>
    <string name="unfollow">Unfollow</string>
    <string name="share_to">Share to...</string>
    <string name="copy_link">Copy Link</string>
    <string name="turn_on_post_notification">Turn on post Notification</string>
    <string name="report">Report...</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="phone_number">Phone number</string>
    <string name="bio">Bio</string>
    <string name="post_to_other_apps">Post to Other Apps...</string>
    <string name="delete">Delete</string>
    <string name="archive">Archive</string>
    <string name="edit">Edit</string>
    <string name="hide_like_count">Hide Like Count</string>
    <string name="turn_off_commenting">Turn Off Commenting</string>
    <string name="edit_info">Edit Info</string>
    <string name="write_a_caption">Write a Caption...</string>
    <string name="settings">Settings</string>
    <string name="your_activity">Your Activity</string>
    <string name="qr_code">QR Code</string>
    <string name="saved">Saved</string>
    <string name="close_friends">Close Friends</string>
    <string name="covid_19_information">COVID-19 Information</string>
    <string name="follow">Follow</string>
    <string name="message">Message...</string>
    <string name="check_your_internet">Check your internet...</string>
    <string name="log_in">Log In</string>
    <string name="try_again">Try Again</string>
    <string name="sign_up">Sign Up</string>

</resources>