<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activity.EditProfileActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/ic_baseline_close_24" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/imgsendinsta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@id/imgback"
                android:gravity="center"
                android:text="@string/edit_profile"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgnext"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="16dp"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/ic_baseline_done_24" />
        </RelativeLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <EditText
        android:id="@+id/etGetImgId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="?actionBarSize">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePic"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginTop="18dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textChangeProfilePic"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:text="@string/change_profile_photo"
                android:textColor="@color/insta_blue"
                android:textSize="19sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profilePic" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldName"
                style="@style/TextInputLayoutStyleEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:layout_constraintTop_toBottomOf="@+id/textChangeProfilePic">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    style="@style/MyTextInputEditTextEditprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldUserName"
                style="@style/TextInputLayoutStyleEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUserName"
                    style="@style/MyTextInputEditTextEditprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldEmail"
                style="@style/TextInputLayoutStyleEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail_address"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldUserName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    style="@style/MyTextInputEditTextEditprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldPhoneNumber"
                style="@style/TextInputLayoutStyleEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhoneNumber"
                    style="@style/MyTextInputEditTextEditprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextFieldBio"
                style="@style/TextInputLayoutStyleEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bio"
                app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldPhoneNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBio"
                    style="@style/MyTextInputEditTextEditprofile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/view1"
                style="@style/view"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldBio" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/swichtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:paddingLeft="16dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="Switch to Professional Account"
                android:textColor="@color/insta_blue"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/view1" />

            <View
                android:id="@+id/view2"
                style="@style/view"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/swichtext" />

            <View
                android:id="@+id/view3"
                style="@style/view"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/view2" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/personal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:paddingLeft="16dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:text="Personal Information Settings"
                android:textColor="@color/insta_blue"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/view3" />

            <View
                android:id="@+id/view4"
                style="@style/view"
                android:layout_width="match_parent"
                android:paddingBottom="5dp"
                app:layout_constraintTop_toBottomOf="@id/personal" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>