<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activity.EditPostActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >
            <ImageView
                android:id="@+id/imgback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_close_24"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:foreground="?attr/selectableItemBackground"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/imgsendinsta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imgback"
                android:text="@string/edit_info"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="19sp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="16dp"/>

            <ImageView
                android:id="@+id/imgnext"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_done_24"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="16dp"
                android:foreground="?attr/selectableItemBackground"
                />
        </RelativeLayout>

    </com.google.android.material.appbar.MaterialToolbar>



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgProfilePost"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@mipmap/ic_launcher"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_margin="10dp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvUsernamePost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@id/imgProfilePost"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/username"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_margin="10dp"
                    android:textColor="@color/black_100"
                    android:text="1h"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/linear">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="140dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgPost"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/eren5"
                android:scaleType="centerCrop"
                />



            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/write_a_caption"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:paddingBottom="17dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                app:layout_constraintTop_toBottomOf="@id/imgPost"
                style="@style/MyTextInputEditTextEditprofile"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

